fix(abc:sv): fix vertical align is top of detail

--- a/packages/abc/sv/style/index.less
+++ b/packages/abc/sv/style/index.less
@@ -87,6 +87,7 @@
     padding-bottom: @sv-bottom;
     color: @sv-detail-color;
     line-height: 22px;
+    vertical-align: top;
     word-break: break-all;
   }
 
